# snipd-podcast-format-for-obsidian

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backup/: snipd_export_2025-01-19_11-14.md
