[project]
name = "main"
version = "0.1.0"
description = ""
authors = [
    {name = "HX",email = "im@bgzo.cc"}
]
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml (>=6.0.2,<6.1.0)",
    "click (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
#package-mode= false

[tool.poetry.scripts]
cli="main:cli"
snipd="main:main"